--- a/react-redux-ui-application-codecademy/index.css
+++ b/react-redux-ui-application-codecademy/index.css
@@ -1,16 +1,14 @@
-!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="./index.css">
-	<title>Learn ReactJS</title>
-</head>
+#root {
+  text-align: center;
+  font-size: 25px;
+}
 
-<body>
-  <div id="root">
-  </div>
-</body>
-<!-- Do Not Remove -->
-<script src="https://content.codecademy.com/courses/React/react-16-redux-4-bundle.min.js"></script>
-<script src="./store.compiled.js"></script>
-</html>
+button {
+  height: 40px;
+  width: 40px;
+  font-size: 24px;
+}
+
+p {
+  margin-bottom: 5px;
+}
